migrations to spring boot 3.0.13